css/style.css
body {
  background-color: lightblue;
  padding: 20px;
}

/* QUERYFIELD FOR USER INPUT */

.queryfield {
  background-color: white;
  padding: 20px;
  max-width: 1015px;
  margin: auto;
}

.queryfield input {
  min-width: 100px;
  text-align: center;
  font-size: 50pt;
  border: none;
  background-color: transparent;
  margin-left: auto;
  outline: none;
}

/* QUERY SEARCH BUTTON */

#searchBtn {
  outline: none;
  border: none;
  border-radius: 50%;
  min-width: 75px;
  height: 75px;
  background-image: url(../assets/search.png);
  background-position: center;
  background-size: 60%;
  background-repeat: no-repeat;
  align-self: center;
  margin-left: auto;
}

/* SAVE BUTTON & HISTORY BUTTON */

.utility button {
  width: 500px;
  height: 100px;
  font-size: 50pt;
  background-color: white;
  border: none;
  outline: none;
  border-radius: 10px;
}

.utility, #card, .queryfield {
  display: flex;
  justify-content: center;
  margin-bottom: 15px;
  box-sizing: border-box;
}

.divider{
    width:15px;
    height:auto;
    display:inline-block;
}

/* CARD DISPLAY */

#card {
  font-size: 40pt;
  display: block;
  padding: 1%;
  max-width: 1015px;
  margin: auto;
}

#card h1 {
  text-align: center;
  position: relative;
}

#card p {
  margin-left: 5%;
  margin-right: 5%;
  position: relative;
  font-family: sans-serif;
  text-align: center;
}

#card button {
  position: absolute;
  right: 0;
  margin-right: 5%;
  top: 50%;
  transform: translateY(-50%);
}

/* SAVE BUTTON */

#card button {
  background-image: url(../assets/star.png);
  background-color: transparent;
  border: none;
  border-radius: 50%;
  min-width: 75px;
  height: 75px;
  background-position: center;
  background-size: 60%;
  background-repeat: no-repeat;
}

#card button:focus {
  outline: none;
}


/* SavedWords.html */

/* header */

#listPageHeader {
  text-align: center;
  font-size: 42pt;
  font-family: Arial, Helvetica, sans-serif;
  margin-bottom: 80px;
}

/* back button */

#back {
  position: -webkit-sticky;
  position: sticky;
  top: 0;
  width: 30px;
  height: 30px;
  background-color: transparent;
  background-image: url(../assets/back.svg);
  background-position: center;
  background-size: 60%;
  background-repeat: no-repeat;
  border: none;
  border-radius: 50%;
  outline: none;
}

#back:hover {
  background-color: yellow;
}

/* ul */

#savedList {
  padding-left: 0;
}

/* li items */

#savedList li {
  text-align: center;
  padding: 15px;
  background-color: blue;
  color: white;
  font-size: 18pt;
}

#savedList li:hover {
  background-color: orange;
}

#savedList li p {
  color: black;
  font-size: 12pt;
}

/* Delete Button */

.deleteBtn {
  float: right;
  vertical-align: middle;
}

